# wasi-virt-transform

./: Cargo.toml
src/: bindings.rs  lib.rs
wit/: world.wit
